adding input validation and cleanup

--- a/web/src/main/webapp/css/managed-wifi.css
+++ b/web/src/main/webapp/css/managed-wifi.css
@@ -145,3 +145,8 @@ h1.content-title {
     -ms-user-select: none;
     user-select: none;
 }
+
+.ng-invalid-subnet,.ng-invalid-ip {
+    border-color: #b94a48 !important;
+    color: #b94a48 !important;
+}
