--- a/web/src/main/webapp/templates/Site.html
+++ b/web/src/main/webapp/templates/Site.html
@@ -67,13 +67,13 @@
                                     <div class="control-group">
                                         <label for="city" class="control-label">City</label>
                                         <div class="controls">
-                                            <input type="text" id="city" name="city" placeholder="Provide a city..." ng-model="site.city">
+                                            <input type="text" id="city" name="city" placeholder="Provide a city..." capitalize-first ng-model="site.city">
                                         </div>
                                     </div>
                                     <div class="control-group">
                                         <label for="state" class="control-label">State</label>
                                         <div class="controls">
-                                            <input type="text" id="state" name="state" placeholder="Provide a state..." ng-model="site.state">
+                                            <input type="text" id="state" name="state" placeholder="Provide a state..." capitalize-state ng-model="site.state">
                                         </div>
                                     </div>
                                     <div class="control-group">
