minor tweaks from demo

--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -52,7 +52,7 @@
             </ul>
         </div>
     </th>
-    <th><a ng-click="paginator.setOrder('user_num_sta')"># of Clients<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
+    <th><a ng-click="paginator.setOrder('user_num_sta')"># of Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
     <th><a ng-click="paginator.setOrder('tx_bytes')">Download<i ng-class="paginator | sortClass:'tx_bytes'"></i></a></th>
     <th><a ng-click="paginator.setOrder('rx_bytes')">Upload<i ng-class="paginator | sortClass:'rx_bytes'"></i></a></th>
     <th class="no-hover"></th>
