--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -55,6 +55,7 @@
     <th><a ng-click="paginator.setOrder('user_num_sta')"># of Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
     <th><a ng-click="paginator.setOrder('tx_bytes')">Download<i ng-class="paginator | sortClass:'tx_bytes'"></i></a></th>
     <th><a ng-click="paginator.setOrder('rx_bytes')">Upload<i ng-class="paginator | sortClass:'rx_bytes'"></i></a></th>
+    <th><a ng-click="paginator.setOrder('cfgversion')">Version<i ng-class="paginator | sortClass:'cfgversion'"></i></a></th>
     <th class="no-hover"></th>
 </tr>
 </thead>
@@ -70,6 +71,7 @@
     <td>{{accessPoint.user_num_sta}}</td>
     <td>{{accessPoint.tx_bytes | bytes}}</td>
     <td>{{accessPoint.rx_bytes | bytes}}</td>
+    <td>{{accessPoint.cfgversion}}</td>
     <td>
         <div class="dropdown settings" ng-hide="accessPoint.state > 2"><a href="#" data-toggle="dropdown" class="dropdown-toggle icons"><i class="icon-cog"></i><i class="icon-caret-down"></i></a>
             <ul role="menu" aria-labelledby="dropdownMenu" class="dropdown-menu pull-right">
