--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -49,7 +49,10 @@
 
                                     <div ng-class="{'disabled-form': !settings.portal_enabled}">
                                         <div class="control-group">
-                                        <div class="control-label">Authentication</div>
+                                        <div class="control-label">
+                                            Authentication
+                                            <i class="icon-question-sign section-help" tooltip-placement="left" tooltip="If you already have your own hotspot authentication system, choose the [External Portal Server] option to defer to that system. Contact Jive Communications for more information on implementation details."></i>
+                                        </div>
                                         <div class="controls">
                                             <label class="radio">
                                                 <input type="radio" ng-model="settings.auth" value="none" ng-disabled="!settings.portal_enabled">No authentication
