--- a/web/src/main/webapp/templates/Networks.html
+++ b/web/src/main/webapp/templates/Networks.html
@@ -30,6 +30,7 @@
         <table class="table table-striped table-condensed">
             <thead>
             <tr>
+                <th></th>
                 <th><a ng-click="paginator.setOrder('name')">Name<i ng-class="paginator | sortClass:'name'"></i></a></th>
                 <th>
                     <div class="dropdown"><a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" ng-class="filter.enabled ? 'active' : null">Status<i class="icon-filter"></i></a>
@@ -71,6 +72,7 @@
             </thead>
             <tbody>
             <tr ng-repeat="network in networks | filter: filter | storeItemCount: paginator.updateTotalItems | orderBy: paginator.orderBy | slice:(paginator.currentPage-1)*20:20">
+                <td><a ng-click="deleteNetwork(network.id)"><i class="icon-trash" ></i></a></td>
                 <td><a ng-href="#/network/{{network.id}}">{{network.name}}</a></td>
                 <td>{{network.enabled ? 'Enabled' : 'Disabled'}}</td>
                 <td>{{network.is_guest ? 'Guest Network' : 'Private Network'}}</td>
