--- a/web/src/main/webapp/templates/AccessPointList.html
+++ b/web/src/main/webapp/templates/AccessPointList.html
@@ -1,8 +1,8 @@
 <div class="row-fluid page-title">
     <div class="span12">
-        <h1 class="content-title">Manage Access Point Devices</h1>
+        <h1 class="content-title">Manage Access Points</h1>
         <ul class="crumbs">
-            <li><a style="cursor:pointer;">Access Point Devices</a></li>
+            <li><a style="cursor:pointer;">Access Points</a></li>
         </ul>
     </div>
 </div>
@@ -52,7 +52,7 @@
             </ul>
         </div>
     </th>
-    <th><a ng-click="paginator.setOrder('user_num_sta')"># of Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
+    <th><a ng-click="paginator.setOrder('user_num_sta')"># of Connected Devices<i ng-class="paginator | sortClass:'user_num_sta'"></i></a></th>
     <th><a ng-click="paginator.setOrder('tx_bytes')">Download<i ng-class="paginator | sortClass:'tx_bytes'"></i></a></th>
     <th><a ng-click="paginator.setOrder('rx_bytes')">Upload<i ng-class="paginator | sortClass:'rx_bytes'"></i></a></th>
     <th><a ng-click="paginator.setOrder('cfgversion')">Version<i ng-class="paginator | sortClass:'cfgversion'"></i></a></th>
