--- a/web/src/main/webapp/templates/Help.html
+++ b/web/src/main/webapp/templates/Help.html
@@ -12,7 +12,7 @@
     <div class="span12">
         <ul class="content-sidebar">
             <li><a ng-click="setActiveItem('Overview')" ng-class="itemClass('Overview')"><i class="icon-asterisk"></i>Overview</a></li>
-            <li><a ng-click="setActiveItem('APDevices')" ng-class="itemClass('APDevices')"><i class="icon-asterisk"></i>Access Point Devices</a></li>
+            <li><a ng-click="setActiveItem('APDevices')" ng-class="itemClass('APDevices')"><i class="icon-asterisk"></i>Access Points</a></li>
             <li><a ng-click="setActiveItem('Networks')" ng-class="itemClass('Networks')"><i class="icon-asterisk"></i>Wireless Networks</a></li>
             <li><a ng-click="setActiveItem('Devices')" ng-class="itemClass('Devices')"><i class="icon-asterisk"></i>Connected Devices</a></li>
             <li><a ng-click="setActiveItem('Sites')" ng-class="itemClass('Sites')"><i class="icon-asterisk"></i>Sites</a></li>
@@ -33,7 +33,7 @@
                             <p>The pages that have a search box in the upper right corner of the page, allow for admins to search for items on that page. The pages that have a search bar are:
                                 <ul>
                                     <li>
-                                        Access Point Devices
+                                        Access Points
                                         <ul>
                                             <li>
                                                 Searchable by:
@@ -96,8 +96,8 @@
                     </div>
                     <div class="row-fluid" ng-show="activeHelpItem == 'APDevices'">
                         <div class="span12">
-                            <h2>Access Point Devices</h2>
-                            <p>This section helps admins adopt, remove and manage individual access points(AP’s). This screen is where AP’s are adopted, removed, and sorted. Each line has a MAC address which links to the page to edit the AP. Admins can also click on the gear icon <img src="/assets/help/gear.png"> at the end of the line to see the options available to configure the IP address of the AP. Clicking on “Settings” allows users to change the ‘Alias’ or name that shows up in the Wifi Management tool.</p>
+                            <h2>Access Points</h2>
+                            <p>This section helps admins adopt, remove and manage individual access points(AP’s). This screen is where AP’s are adopted, removed, and sorted. Each line has a MAC address which links to the page to edit the AP. Admins can also click on the gear icon <img src="/assets/help/gear.png"> at the end of the line to see the options available to configure the IP address of the AP. Clicking on “Settings” allows users to change the ‘Alias’ or name of the device that shows up in the Wifi Management tool.</p>
                             <p>If Static IP address is chosen, an extra “Network” tab shows up next to the tab “Config”. In the Network tab, there are fields to configure the Static IP address.</p>
                         </div>
                     </div>
