--- a/web/src/main/webapp/templates/Users.html
+++ b/web/src/main/webapp/templates/Users.html
@@ -3,7 +3,7 @@
 
         <h1 class="content-title">Manage Connected Devices<span ng-show="accessPoint">for {{accessPoint}}</span></h1>
         <ul class="crumbs">
-            <li ng-show="accessPoint"><a href="#/devices">Access Point Devices</a></li>
+            <li ng-show="accessPoint"><a href="#/devices">Access Points</a></li>
             <li ng-show="accessPoint"><a ng-href="#/device/{{apId}}">Manage {{accessPoint}}</a></li>
             <li ng-class="{'first': !accessPoint}"><a style="cursor:pointer;">Connected Devices</a></li>
         </ul>
